# booster-runner

./: 2025-11-26_11-50-24.onnx  README.md  pyproject.toml
configs/: K1.yaml
docs/: policy_observation.md
models/: test-motion.onnx  test-motion_linvel.onnx
motions/: test-motion.npz
src/booster_runner/: __init__.py  requirements.txt
src/booster_runner/configs/: K1.yaml
src/booster_runner/models/: k1.onnx
src/booster_runner/motions/: dance_abc.npz  glorious_dance.npz
src/booster_runner/utils/: command.py  motion.py  orientation_filter.py  policy.py  pose_filter.py  reference_observation.py  remote_control_service.py  rerun_logger.py  rotate.py
